[gd_scene load_steps=9 format=3 uid="uid://b3oi7fdrhr705"]

[ext_resource type="Script" path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/JustAGolf/BolaGolf1.gd" id="1"]
[ext_resource type="BoxMesh" path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/JustAGolf/PowerMeterKotak.tres" id="2"]
[ext_resource type="Material" path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/JustAGolf/PowerMeterRelax.tres" id="3"]
[ext_resource type="Material" path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/JustAGolf/PowerMeterStress.tres" id="4"]
[ext_resource type="AudioStream" uid="uid://cx8bn2vf6mgbx" path="res://Audio/EfekSuara/425728__moogy73__click01.wav" id="5"]
[ext_resource type="Script" path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/JustAGolf/InteractorKey.gd" id="6"]

[sub_resource type="SphereShape3D" id="1"]
radius = 0.05

[sub_resource type="SphereShape3D" id="2"]

[node name="BolaGolf1" type="RigidBody3D"]
angular_damp = 0.5
script = ExtResource("1")
PowerMeterRelax = ExtResource("3")
PowerMeterStress = ExtResource("4")
PuttSound = ExtResource("5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("1")

[node name="CSGSphere3D" type="CSGSphere3D" parent="."]
radius = 0.05
radial_segments = 32
rings = 32

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="."]
update_rotation = false
update_scale = false

[node name="PowerMeter" type="CSGMesh3D" parent="."]
mesh = ExtResource("2")
material = ExtResource("3")

[node name="Speeker" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5")

[node name="InteractorKey" type="Area3D" parent="."]
script = ExtResource("6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractorKey"]
shape = SubResource("2")

[connection signal="body_entered" from="." to="." method="_on_BolaGolf1_body_entered"]
[connection signal="body_entered" from="InteractorKey" to="." method="_on_InteractorKey_body_entered"]
